--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section class="section-5" id="sec5">
         <div class="sec5">
             <h2 class="Order"></h2>
-            <form class="f2-enquiry" id="form2">
+            <form class="f2-enquiry" id="form2" data-netlify="true" >
                 <fieldset>
                     <legend>Contact us for Order</legend>
                     Name:<input type="text" name="name" id="fname" value="" placeholder="Enter your name" />
